Cambios es def actualizar_stock y mejoras en el resto de funciones obligatorias

--- a/evaluacion_final_modulo1.ipynb
+++ b/evaluacion_final_modulo1.ipynb
@@ -17,24 +17,30 @@
    "source": [
     "class Tienda: \n",
     "    def __init__(self):\n",
-    "        self.inventario = [] # lista\n",
+    "        self.inventario = [] # lista de diccionarios. \n",
     "        self.clientes = {} # diccionario\n",
     "        self.ventas_totales = 0.0 # float (decimales) \n",
     "    \n",
     "    def agregar_producto(self, nombre, precio, cantidad):\n",
-    "        ropa = []\n",
+    "        producto = [] # se crea una lista vacia donde se añadiran los diferentes productos. \n",
+    "        precio = float(precio)\n",
+    "        cantidad = int(cantidad)\n",
+    "\n",
+    "        # TRY .... EXCEPT -> mirarlo y usarlo en esta función\n",
+    "\n",
+    "\n",
     "        for p in self.inventario: #recorre la lista del inventario, cada elemento de la lista a su vez es un diccionario.\n",
-    "            ropa.append(p['nombre']) # añadir a la lista \"ROPA\" los diferentes productos del inventario.\n",
+    "            producto.append(p['nombre']) # añadir a la lista \"producto\" los diferentes productos del inventario.\n",
     "            if nombre == p['nombre']: # verifica si coincide el nombre del nuevo producto con uno del inventario, donde p es el diccionario\n",
     "                p['cantidad'] += cantidad # si existe, actualiza el inventario y añade la \"cantidad\".\n",
     "                print(f'El producto \"{nombre}\" ya existe y se ha actualizado la cantidad en el inventario a {p['cantidad']} unidad(es).')\n",
     "\n",
-    "        if nombre not in ropa: # si el nombre NO se encuentra en la lista ropa entonces se añade al inventario\n",
+    "        if nombre not in producto: # si el nombre NO se encuentra en la lista producto entonces se añade al inventario\n",
     "            self.inventario.append({'nombre': nombre, 'precio': precio, 'cantidad': cantidad}) \n",
     "            print(f'El producto \"{nombre}\" ha sido añadido al inventario con un precio de ${precio} y una cantidad de {cantidad} unidad(es).')\n",
     "\n",
     "    def ver_inventario(self): \n",
-    "        for p in self.inventario:\n",
+    "        for p in self.inventario: # Se recorre inventario para ir sacando por pantalla todos los productos que se encuentra en ella. \n",
     "            print(f'Nombre: {p['nombre']}, Precio: ${p['precio']}, Cantidad: {p['cantidad']}.')\n",
     "\n",
     "    def buscar_producto(self, nombre): \n",
@@ -51,36 +57,62 @@
     "        return existe_prod # Devuelve: True si existe el producto y False si no existe. (Para def realizar_compra) \n",
     "        \n",
     "    def actualizar_stock(self, nombre, cantidad): \n",
+    "        # FORMA SIN TENER EN CUENTA UN STOCK NEGATIVO        \n",
+    "        #existe_prod = False # se crea una variable de tipo boleano para comprobar si el producto existe en el inventario. Por defecto se inicializa a False dándose por hecho que no existe inicialmente.\n",
+    "        #for p in self.inventario: # Se recorre el inventario para buscar el producto que se quiere actualizar\n",
+    "        #    if nombre == p['nombre']: # Si se encuentra el producto a actualizar\n",
+    "        #        p['cantidad'] += cantidad # Se actualiza la cantidad, sumándoselo al stock existente\n",
+    "        #        print(f'El producto \"{nombre}\" ha sido actualizado. Su stock actual es de {p['cantidad']}.') # Se saca un mensaje por pantalla indicando que se ha actualizado.\n",
+    "        #        existe_prod = True # Se cambia la variable a True porque se ha encontrado el producto en el inventario. \n",
+    "        #        break # se para cuando encuentra el producto en el inventario para que no siga iterando. \n",
+    "        \n",
+    "        #if not existe_prod: # Si el producto a actualizar no se encuentra en el inventario. \n",
+    "        #    print(f'El producto \"{nombre}\" no se encuentra en el inventario.') # Se indica con un mensaje. \n",
+    "\n",
     "        existe_prod = False\n",
     "        for p in self.inventario: \n",
-    "            if nombre == p['nombre']: \n",
-    "                p['cantidad'] += cantidad\n",
-    "                print(f'El producto \"{nombre}\" ha sido actualizado. Su stock actual es de {p['cantidad']}.')\n",
-    "                existe_prod = True\n",
+    "            if nombre == p['nombre']:\n",
+    "                existe_prod = True \n",
+    "                if cantidad < 0: \n",
+    "                    resta = p['cantidad'] + cantidad\n",
+    "                    if resta < 0: \n",
+    "                        print('ERROR')\n",
+    "                        print(f'La cantidad en stock de \"{nombre}\" es negativa. No se puede actualizar el stock.')\n",
+    "                    elif resta >= 0: \n",
+    "                        p['cantidad'] += cantidad\n",
+    "                        print(f'El producto \"{nombre}\" ha sido actualizado. Su stock actual es de {p['cantidad']}.')\n",
+    "                elif cantidad > 0:\n",
+    "                    p['cantidad'] += cantidad\n",
+    "                    print(f'El producto \"{nombre}\" ha sido actualizado. Su stock actual es de {p['cantidad']}.')\n",
+    "                else:\n",
+    "                    print(f'El producto \"{nombre}\" no ha actualizado su stock debido a que la cantidad a añadir es CERO.')\n",
+    "                \n",
     "                break\n",
     "        \n",
-    "        if not existe_prod: \n",
-    "            print(f'El producto \"{nombre}\" no se encuentra en el inventario.')\n",
+    "        if not existe_prod: # Si el producto a actualizar no se encuentra en el inventario. \n",
+    "            print(f'El producto \"{nombre}\" no se encuentra en el inventario.') # Se indica con un mensaje. \n",
+    "\n",
     "\n",
     "    def eliminar_producto(self, nombre): \n",
     "        contador = 0 # Un contador que se inicia en 0 para saber la posición en la lista en cada iteración para que cuando encontremos el producto a eliminar tengamos su posición.  \n",
-    "        encontrar = False # Una variable buleana para que \n",
+    "        self.buscar_producto(nombre) # Llamando a la función buscar_producto. En el caso de que el producto que se quiere eliminar no exista esta función lo imprime por pantalla. \n",
+    "                                     # En el caso de que el producto que se quiere eliminar exista, dará la información completa en el inventario antes de eliminarlo. \n",
     "        \n",
-    "        for p in self.inventario: \n",
-    "            if nombre == p['nombre']:\n",
-    "                self.inventario.pop(contador) \n",
-    "                encontrar = True\n",
+    "        for p in self.inventario: # Recorremos el inventario para buscar el producto que se desea eliminar. \n",
+    "            if nombre == p['nombre']:# Si el nombre indicado se encuentra en nuestro inventario\n",
+    "                self.inventario.pop(contador) # Se eliminará de inventario el producto con la función pop, y utilizando la posición que la variable contador nos indica\n",
+    "                #encontrar = self.buscar_producto(nombre)\n",
     "                print(f'El producto \"{nombre}\" ha sido eliminado correctamente.')\n",
-    "                break\n",
-    "            contador +=1\n",
+    "                break # Se para cuando encuentra el producto a eliminar\n",
+    "            contador +=1 # Va aumentando en uno la variable contador en cada vuelta que da. \n",
     "        \n",
-    "        if not encontrar:\n",
-    "            print(f'No ha sido encontrado el producto \"{nombre}\".')\n",
+    "        #if not encontrar:\n",
+    "        #   print(f'No ha sido encontrado el producto \"{nombre}\".')\n",
     "            \n",
     "    def calcular_valor_inventario(self):\n",
-    "        valor_inventario = 0\n",
-    "        for p in self.inventario:\n",
-    "            valor_inventario += p['precio'] * p['cantidad']\n",
+    "        valor_inventario = 0 # Iniciamos una variable con nombre VALOR a cero\n",
+    "        for p in self.inventario: # Recorremos el inventario \n",
+    "            valor_inventario += p['precio'] * p['cantidad'] # para ir añadiendo en la variable valor_inventario la suma-producto de precio por la cantidad que hay en stock\n",
     "        print(f'El valor total del inventario es ${valor_inventario}.')\n",
     "\n",
     "\n",
@@ -89,41 +121,41 @@
     "        lista_compra = []\n",
     "        total = 0\n",
     "            \n",
-    "        while compra == True: \n",
+    "        while compra == True: # variable compra es la que cambiará a False cuando queramos que el while termine\n",
     "            print('Productos del inventario:')\n",
-    "            self.ver_inventario()\n",
-    "            selec_producto = input('Seleccione un producto:')\n",
+    "            self.ver_inventario() # Para que el cliente sepa que hay en el inventario\n",
+    "            selec_producto = input('Seleccione un producto:') # Indica el producto que desea\n",
     "        \n",
-    "            existe_producto = self.buscar_producto(selec_producto)\n",
-    "            if not existe_producto:\n",
+    "            existe_producto = self.buscar_producto(selec_producto) # Verificar que el producto que ha indicado existe, mediante la función buscar_producto.\n",
+    "            if not existe_producto: # Si no existe el producto indicado, volvemos a indicarle que 'Seleccione un producto' \n",
     "                continue\n",
     "\n",
-    "            for p in self.inventario:\n",
+    "            for p in self.inventario: # Busco en el inventario el producto seleccionado por el cliente en el inventario \n",
     "                if selec_producto == p['nombre']: \n",
-    "                    total += p['precio']\n",
+    "                    total += p['precio'] # para sumar su precio a la variable total, iniciada más arriba con un cero. \n",
     "                    \n",
-    "            lista_compra.append(selec_producto)\n",
-    "            self.actualizar_stock(selec_producto, -1)\n",
-    "            seguir_comprando = input('¿Desea seguir comprando? Indique con un Sí o con un No.')\n",
+    "            lista_compra.append(selec_producto) # vamos añadiendo los productos seleccionados por el cliente en una lista\n",
+    "            self.actualizar_stock(selec_producto, -1) # Actualizamos el stock con la función actualizar_stock\n",
+    "            seguir_comprando = input('¿Desea seguir comprando? Indique con un SI o con un NO.') # Comprobamos si el cliente quiere seguir comprando o no.\n",
     "\n",
-    "            if seguir_comprando == 'Sí': \n",
+    "            if seguir_comprando.upper() == 'SI': # Si quiere seguir comprando, la variable compra = True y empezaremos de nuevo el bucle while\n",
     "                compra = True\n",
     "\n",
-    "            elif seguir_comprando == 'No': \n",
-    "                print(f'El carrito con sus producto es el siguiente: {lista_compra}.')\n",
-    "                print(f'El coste total de su compra es de {total}')\n",
-    "                compra = False\n",
+    "            elif seguir_comprando.upper() == 'NO': # Si no quiere seguir comprando\n",
+    "                print(f'El carrito con sus producto es el siguiente: {lista_compra}.') # Le indicaremos los productos que hay en su carrito\n",
+    "                print(f'El coste total de su compra es de {total}') # y el coste total de su compra. \n",
+    "                compra = False # La variable compra la igualaremos a False para que le bucle while termine. \n",
     "\n",
     "            else: \n",
-    "                print('RESPUESTA NO VALIDA.')\n",
-    "                print(f'El carrito con sus producto es el siguiente: {lista_compra}.')\n",
-    "                print(f'El coste total de su compra es de {total}')\n",
-    "                compra = False"
+    "                print('RESPUESTA NO VALIDA.') # Está el caso de no ponga ni SI ni NO, en ese caso le diremos que su respuesta no es valida\n",
+    "                print(f'El carrito con sus producto es el siguiente: {lista_compra}.') # LE mostraremos su carrito con los productos\n",
+    "                print(f'El coste total de su compra es de {total}') # El coste total de su compra\n",
+    "                compra = False # y la variable compra la igualaremos a False para finalizar el bucle while. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 51,
    "id": "76f17d47",
    "metadata": {},
    "outputs": [],
@@ -133,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 52,
    "id": "429627ad",
    "metadata": {},
    "outputs": [
@@ -141,17 +173,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El producto \"Camisa\" ha sido añadido al inventario con un precio de $2 y una cantidad de 20 unidad(es).\n"
+      "El producto \"Camisa\" ha sido añadido al inventario con un precio de $2 y una cantidad de 2 unidad(es).\n"
      ]
     }
    ],
    "source": [
-    "mi_tienda.agregar_producto('Camisa', 2, 20)\n"
+    "mi_tienda.agregar_producto('Camisa', 2, 2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 53,
    "id": "dab3ae94",
    "metadata": {},
    "outputs": [
@@ -169,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 54,
    "id": "7d6f62ca",
    "metadata": {},
    "outputs": [
@@ -187,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 55,
    "id": "0ed48a58",
    "metadata": {},
    "outputs": [
@@ -195,7 +227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: Camisa, Precio: $20, Cantidad: 40.\n",
+      "Nombre: Camisa, Precio: $2, Cantidad: 2.\n",
       "Nombre: Pantalon, Precio: $15, Cantidad: 60.\n"
      ]
     }
@@ -206,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 56,
    "id": "4d9bb512",
    "metadata": {},
    "outputs": [
@@ -224,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 57,
    "id": "aaa87773",
    "metadata": {},
    "outputs": [
@@ -232,7 +264,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: Camisa, Precio: $20, Cantidad: 40.\n",
+      "Nombre: Camisa, Precio: $2, Cantidad: 2.\n",
       "Nombre: Pantalon, Precio: $15, Cantidad: 60.\n",
       "Nombre: Chaqueta, Precio: $50, Cantidad: 10.\n"
      ]
@@ -244,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 58,
    "id": "d9865af3",
    "metadata": {},
    "outputs": [
@@ -261,7 +293,7 @@
        "False"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 59,
    "id": "25a29e1e",
    "metadata": {},
    "outputs": [
@@ -289,7 +321,7 @@
        "True"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 60,
    "id": "38027c4c",
    "metadata": {},
    "outputs": [
@@ -308,7 +340,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El producto \"Camisa\" ha sido actualizado. Su stock actual es de 80.\n"
+      "El producto \"Camisa\" ha sido actualizado. Su stock actual es de 42.\n"
      ]
     }
    ],
@@ -318,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 61,
    "id": "bf1f8117",
    "metadata": {},
    "outputs": [
@@ -336,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 62,
    "id": "032a1863",
    "metadata": {},
    "outputs": [
@@ -344,7 +376,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nombre: Camisa, Precio: $20, Cantidad: 80.\n",
+      "Nombre: Camisa, Precio: $2, Cantidad: 42.\n",
       "Nombre: Pantalon, Precio: $15, Cantidad: 60.\n",
       "Nombre: Chaqueta, Precio: $50, Cantidad: 10.\n"
      ]
@@ -356,7 +388,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 63,
+   "id": "a9939879",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR\n",
+      "La cantidad en stock de \"Pantalon\" es negativa.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.actualizar_stock('Pantalon', -100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "86217a0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: Camisa, Precio: $2, Cantidad: 42.\n",
+      "Nombre: Pantalon, Precio: $15, Cantidad: 60.\n",
+      "Nombre: Chaqueta, Precio: $50, Cantidad: 10.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "4c9e2542",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El producto \"Camisa\" ha sido actualizado. Su stock actual es de 2.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.actualizar_stock('Camisa', -40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "8bc1700a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: Camisa, Precio: $2, Cantidad: 2.\n",
+      "Nombre: Pantalon, Precio: $15, Cantidad: 60.\n",
+      "Nombre: Chaqueta, Precio: $50, Cantidad: 10.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "eba61861",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El producto \"Camisa\" no ha actualizado su stock debido a que la cantidad a añadir es CERO.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.actualizar_stock('Camisa', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "588f86a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: Camisa, Precio: $2, Cantidad: 2.\n",
+      "Nombre: Pantalon, Precio: $15, Cantidad: 60.\n",
+      "Nombre: Chaqueta, Precio: $50, Cantidad: 10.\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "id": "677144bd",
    "metadata": {},
    "outputs": [
@@ -364,7 +511,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No ha sido encontrado el producto \"Vestido\".\n"
+      "Producto \"Vestido\" no ha sido encontrado.\n"
      ]
     }
    ],
@@ -374,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 49,
    "id": "1389c8e9",
    "metadata": {},
    "outputs": [
@@ -382,6 +529,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Nombre: Pantalon, Precio: $15, Cantidad: 60.\n",
       "El producto \"Pantalon\" ha sido eliminado correctamente.\n"
      ]
     }
