Se añade comentarios en el código.

--- a/evaluacion_final_modulo1.ipynb
+++ b/evaluacion_final_modulo1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "9308e303",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
     "        total = 0 # Variable iniciada en 0 para ir añadiendo los precios de los productos y al final poder decirle cuanto es el total de la compra. \n",
     "            \n",
     "        while compra: # Por defecto es True. Variable compra es la que cambiará a False cuando queramos que el while termine\n",
-    "            stock = True\n",
+    "            stock = True # Creamos una variable buleana para, en el caso de que no haya stock no dejemos que el cliente seleccione más el producto. \n",
     "            print('Productos del inventario:')\n",
     "            self.ver_inventario() # Para que el cliente sepa que hay en el inventario\n",
     "            selec_producto = input('Seleccione un producto:').upper() # Indica el producto que desea\n",
@@ -134,8 +134,8 @@
     "                        stock = False\n",
     "                        print(f'No hay stock suficiente de {selec_producto}.')\n",
     "\n",
-    "            if not stock:\n",
-    "                continue\n",
+    "            if not stock: # si stock es igual a False, es decir, no hay stock del producto que se está seleccionando. \n",
+    "                continue  # omitimos la iteracción y volvemos a pedirle al cliente que seleccione un producto. \n",
     "                    \n",
     "            lista_compra.append(selec_producto) # vamos añadiendo los productos seleccionados por el cliente en una lista\n",
     "            self.actualizar_stock(selec_producto, -1) # Actualizamos el stock con la función actualizar_stock\n",
@@ -156,32 +156,32 @@
     "                compra = False # y la variable compra la igualaremos a False para finalizar el bucle while. \n",
     "\n",
     "    def procesar_pago(self):\n",
-    "        try:\n",
-    "            cantidad_total = float(input('Ingrese la cantidad total:'))\n",
-    "            cantidad_pago = float(input('Ingrese la cantidad de pago:'))\n",
+    "        try: # Se hace un TRY ... EXCEPT para el caso de que el cliente no introduzca un valor. \n",
+    "            cantidad_total = float(input('Ingrese la cantidad total:')) # Se le indica al cliente que introduzca la cantidad total\n",
+    "            cantidad_pago = float(input('Ingrese la cantidad de pago:')) # y la cantidad de pago.\n",
     "\n",
-    "            if cantidad_total < cantidad_pago: \n",
-    "                cambio = cantidad_pago - cantidad_total\n",
+    "            if cantidad_total < cantidad_pago: # Si la cantidad total es menos que la cantidad de pago. \n",
+    "                cambio = cantidad_pago - cantidad_total # Se realiza la resta para indicarle cual es su cambio.\n",
     "                print(f'Pago realizado correctamente. Su cambio es: ${cambio}')\n",
-    "            elif cantidad_total > cantidad_pago: \n",
-    "                print('Error. Monto insuficiente.')\n",
-    "            else: \n",
-    "                print('Pago realizado correctamente.')\n",
+    "            elif cantidad_total > cantidad_pago: # Si la cantidad total es mayor que la cantidad de pago.\n",
+    "                print('Error. Monto insuficiente.') # Se le indica que el monto no es suficiente. \n",
+    "            else: # El único caso que nos falta por tener en cuenta es el caso en el qu eno haya que darle cambio. \n",
+    "                print('Pago realizado correctamente.') # Entonces se le indica que el pago ha sido realizado correctamente. \n",
     "\n",
-    "        except ValueError:\n",
-    "            print('ERROR. La cantidad total o de pago no son un valor numérico. ')   \n",
+    "        except ValueError: # En el caso de que el cliente introduzca un valor no numérico\n",
+    "            print('ERROR. La cantidad total o de pago no son un valor numérico. ') # Se le imprimirá por pantalla este \"error\".    \n",
     "    \n",
     "    def agregar_cliente(self, nombre, email):\n",
-    "        if nombre not in self.clientes: \n",
-    "            nuevo_cliente = {str(nombre) : {'email': email, 'compras': []}}\n",
-    "            self.clientes.update(nuevo_cliente)\n",
+    "        if nombre not in self.clientes: # Si el nombre no se encuentra en el diccionario de clientes\n",
+    "            nuevo_cliente = {str(nombre) : {'email': email, 'compras': []}} # Se define un diccionario con el nuevo cliente\n",
+    "            self.clientes.update(nuevo_cliente) # y se actualiza el diccionario cliente\n",
     "            print(f'Se ha agregado correctamente el cliente \"{nombre}\" al registro de clientes.')\n",
     "        else: \n",
-    "            print('El cliente ya existe.')\n",
+    "            print('El cliente ya existe.') # En caso contrario se indicará que el cliente ya existe en nuestro diccionario.\n",
     "\n",
     "    def ver_clientes(self): \n",
-    "        for clave, valor in self.clientes.items():\n",
-    "            print(f'El nombre del cliente es {clave} y cuyos datos son {valor}') \n"
+    "        for clave, valor in self.clientes.items(): # Se recorre las claves y valores del diccionario clientes\n",
+    "            print(f'El nombre del cliente es {clave} y cuyos datos son {valor}') # con la finalidad de mostrar por pantalla todos los clientes que están en nuestro diccionario. \n"
    ]
   },
   {
